objects/Source_Code_Format_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>File_Extension__c</fullName>
        <label>File Extension</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Path__c</fullName>
        <label>Folder Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metadata</fullName>
                    <default>true</default>
                    <label>Metadata</label>
                </value>
                <value>
                    <fullName>Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Source Code Format Mapping</label>
    <pluralLabel>Source Code Format Mappings</pluralLabel>
</CustomObject>